--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace demo]
 Pos=0,0
-Size=1000,1000
+Size=1680,987
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,37 +10,37 @@ Collapsed=0
 
 [Window][Scene2D tree]
 Pos=9,23
-Size=132,780
+Size=224,770
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=9,805
-Size=194,190
+Pos=9,795
+Size=328,187
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=205,805
-Size=786,190
+Pos=339,795
+Size=1332,187
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=788,23
-Size=203,780
+Pos=1464,23
+Size=207,770
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
-Pos=143,23
-Size=643,780
+Pos=235,23
+Size=1227,770
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Log]
-Pos=205,805
-Size=786,190
+Pos=339,795
+Size=1332,187
 Collapsed=0
 DockId=0x00000009,1
 
@@ -54,14 +54,24 @@ Pos=237,325
 Size=525,350
 Collapsed=0
 
+[Window][Choose directory]
+Pos=325,325
+Size=350,350
+Collapsed=0
+
+[Window][Create scene]
+Pos=237,325
+Size=525,350
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0xF990106D Window=0xA9281B80 Pos=9,23 Size=982,972 Split=Y
+DockSpace       ID=0xF990106D Window=0xA9281B80 Pos=9,23 Size=1662,959 Split=Y
   DockNode      ID=0x00000007 Parent=0xF990106D SizeRef=1662,770 Split=X
     DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=224,957 Selected=0x3EECD7B2
     DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1436,957 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1231,970 CentralNode=1 Selected=0x772F22E0
-      DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=203,970 Selected=0xF02CD328
+      DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1227,970 CentralNode=1 Selected=0x772F22E0
+      DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=207,970 Selected=0xF02CD328
   DockNode      ID=0x00000008 Parent=0xF990106D SizeRef=1662,187 Split=X Selected=0x6D97690D
     DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
-    DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0xB7722E25
+    DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0x6D97690D
 
