--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace demo]
 Pos=0,0
-Size=838,978
+Size=1000,1000
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,49 +10,54 @@ Collapsed=0
 
 [Window][Scene2D tree]
 Pos=9,23
-Size=110,644
+Size=132,748
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=9,669
-Size=162,264
+Pos=9,773
+Size=194,182
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=173,669
-Size=656,264
+Pos=205,773
+Size=786,182
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=626,23
-Size=203,644
+Pos=788,23
+Size=203,748
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
-Pos=121,23
-Size=503,644
+Pos=143,23
+Size=643,748
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Log]
-Pos=173,669
-Size=656,264
+Pos=205,773
+Size=786,182
 Collapsed=0
 DockId=0x00000009,1
 
 [Window][BottomMenu]
-Pos=9,935
-Size=820,38
+Pos=9,957
+Size=982,38
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Choose JDK bin path]
 Pos=325,325
 Size=350,350
+Collapsed=0
+
+[Window][New project]
+Pos=237,325
+Size=525,350
 Collapsed=0
 
 [Window][Choose directory]
@@ -66,14 +71,14 @@ Size=525,350
 Collapsed=0
 
 [Docking][Data]
-DockSpace         ID=0xF990106D Window=0xA9281B80 Pos=9,23 Size=820,950 Split=Y
+DockSpace         ID=0xF990106D Window=0xA9281B80 Pos=9,23 Size=982,972 Split=Y
   DockNode        ID=0x00000006 Parent=0xF990106D SizeRef=1582,775 Split=Y
-    DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,644 Split=X
+    DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,622 Split=X
       DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=224,957 Selected=0x3EECD7B2
       DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1436,957 Split=X
         DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1231,970 CentralNode=1 Selected=0x772F22E0
         DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=203,970 Selected=0xF02CD328
-    DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,264 Split=X Selected=0x6D97690D
+    DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,151 Split=X Selected=0x6D97690D
       DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
       DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0x6D97690D
   DockNode        ID=0x0000000A Parent=0xF990106D SizeRef=1582,32 HiddenTabBar=1 Selected=0xAE51DE0E
