--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -55,19 +55,14 @@ Pos=325,325
 Size=350,350
 Collapsed=0
 
-[Window][New project]
-Pos=237,325
+[Window][Open project]
+Pos=236,325
 Size=525,350
 Collapsed=0
 
 [Window][Choose directory]
 Pos=325,325
 Size=350,350
-Collapsed=0
-
-[Window][Open project]
-Pos=237,325
-Size=525,350
 Collapsed=0
 
 [Docking][Data]
@@ -80,6 +75,6 @@ DockSpace         ID=0xF990106D Window=0xA9281B80 Pos=9,23 Size=982,972 Split=Y
         DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=203,970 Selected=0xF02CD328
     DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,151 Split=X Selected=0x6D97690D
       DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
-      DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0x6D97690D
+      DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0xB7722E25
   DockNode        ID=0x0000000A Parent=0xF990106D SizeRef=1582,32 HiddenTabBar=1 Selected=0xAE51DE0E
 
