--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace demo]
 Pos=0,0
-Size=1600,837
+Size=1080,720
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,43 +10,43 @@ Collapsed=0
 
 [Window][Scene2D tree]
 Pos=0,43
-Size=224,581
+Size=224,464
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=0,626
-Size=316,172
+Pos=0,509
+Size=213,172
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=318,626
-Size=1282,172
+Pos=215,509
+Size=865,172
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=1411,43
-Size=189,581
+Pos=891,43
+Size=189,464
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
 Pos=226,43
-Size=1183,581
+Size=663,464
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Log]
-Pos=318,626
-Size=1282,172
+Pos=215,509
+Size=865,172
 Collapsed=0
 DockId=0x00000009,1
 
 [Window][BottomMenu]
-Pos=0,800
-Size=1600,37
+Pos=0,683
+Size=1080,37
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -57,7 +57,7 @@ Collapsed=0
 
 [Window][Game view]
 Pos=226,43
-Size=1183,581
+Size=663,464
 Collapsed=0
 DockId=0x00000001,1
 
@@ -73,12 +73,17 @@ Collapsed=0
 
 [Window][Toolbar View]
 Pos=0,18
-Size=1600,23
+Size=1080,23
 Collapsed=0
 DockId=0x0000000B
 
+[Window][Tasks]
+Pos=821,570
+Size=259,100
+Collapsed=0
+
 [Docking][Data]
-DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1600,819 Split=Y
+DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 Split=Y
   DockNode          ID=0x0000000B Parent=0xF990106D SizeRef=982,23 Selected=0x5A90505A
   DockNode          ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
