--- a/Core2D/build.gradle
+++ b/Core2D/build.gradle
@@ -30,6 +30,10 @@ jar {
 //                'Main-Class': 'see.SeeTaskManagerMain'
 //        )
 //    }
+    //FatJar
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 repositories {
