--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -100,16 +100,6 @@ Size=549,351
 Collapsed=0
 DockId=0x0000000E,0
 
-[Window][Build project]
-Pos=277,185
-Size=525,350
-Collapsed=0
-
-[Window][Tasks]
-Pos=806,570
-Size=274,100
-Collapsed=0
-
 [Docking][Data]
 DockSpace           ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
   DockNode          ID=0x0000000F Parent=0xA8CBEDD7 SizeRef=700,351 Split=X
@@ -123,7 +113,7 @@ DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 Split
       DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,725 Split=X
         DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=224,957 Selected=0x3EECD7B2
         DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1436,957 Split=X
-          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1176,970 CentralNode=1 Selected=0x772F22E0
+          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1176,970 CentralNode=1 Selected=0xEC9B321F
           DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=189,970 Selected=0xF02CD328
       DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,172 Split=X Selected=0x6D97690D
         DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
