--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace demo]
 Pos=0,0
-Size=1080,720
+Size=1600,837
 Collapsed=0
 
 [Window][Debug##Default]
@@ -10,43 +10,43 @@ Collapsed=0
 
 [Window][Scene2D tree]
 Pos=0,43
-Size=224,464
+Size=224,581
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=0,509
-Size=213,172
+Pos=0,626
+Size=316,172
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=215,509
-Size=865,172
+Pos=318,626
+Size=1282,172
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=891,43
-Size=189,464
+Pos=1411,43
+Size=189,581
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
 Pos=226,43
-Size=663,464
+Size=1183,581
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Log]
-Pos=215,509
-Size=865,172
+Pos=318,626
+Size=1282,172
 Collapsed=0
 DockId=0x00000009,1
 
 [Window][BottomMenu]
-Pos=0,683
-Size=1080,37
+Pos=0,800
+Size=1600,37
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -57,7 +57,7 @@ Collapsed=0
 
 [Window][Game view]
 Pos=226,43
-Size=663,464
+Size=1183,581
 Collapsed=0
 DockId=0x00000001,1
 
@@ -73,7 +73,7 @@ Collapsed=0
 
 [Window][Toolbar View]
 Pos=0,18
-Size=1080,23
+Size=1600,23
 Collapsed=0
 DockId=0x0000000B
 
@@ -100,20 +100,25 @@ Size=549,351
 Collapsed=0
 DockId=0x0000000E,0
 
+[Window][Build project]
+Pos=277,185
+Size=525,350
+Collapsed=0
+
 [Docking][Data]
 DockSpace           ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
   DockNode          ID=0x0000000F Parent=0xA8CBEDD7 SizeRef=700,351 Split=X
     DockNode        ID=0x0000000D Parent=0x0000000F SizeRef=149,407 Selected=0xF1AF874A
     DockNode        ID=0x0000000E Parent=0x0000000F SizeRef=549,407 CentralNode=1 Selected=0x1E7A30BE
   DockNode          ID=0x00000010 Parent=0xA8CBEDD7 SizeRef=700,54 Selected=0x933B30C4
-DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 Split=Y
+DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1600,819 Split=Y
   DockNode          ID=0x0000000B Parent=0xF990106D SizeRef=982,23 Selected=0x5A90505A
   DockNode          ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
-      DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,725 Split=X
+      DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,581 Split=X
         DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=224,957 Selected=0x3EECD7B2
         DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1436,957 Split=X
-          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1176,970 CentralNode=1 Selected=0x772F22E0
+          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1176,970 CentralNode=1 Selected=0xEC9B321F
           DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=189,970 Selected=0xF02CD328
       DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,172 Split=X Selected=0x6D97690D
         DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
