Added build in exe (more bugs to fix added)

--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -106,25 +106,25 @@ Size=700,425
 Collapsed=0
 
 [Window][Engine settings##Engine]
-Pos=190,184
-Size=700,409
+Pos=191,149
+Size=700,425
 Collapsed=0
 
 [Window][MiniMenu##Engine]
-Pos=190,532
+Pos=191,513
 Size=700,61
 Collapsed=0
 DockId=0x00000014
 
 [Window][SideTabs##Engine]
-Pos=190,202
-Size=149,328
+Pos=191,167
+Size=149,344
 Collapsed=0
 DockId=0x00000011
 
 [Window][MainSettingsView##Engine]
-Pos=341,202
-Size=549,328
+Pos=342,167
+Size=549,344
 Collapsed=0
 DockId=0x0000000E
 
@@ -151,8 +151,13 @@ Size=543,341
 Collapsed=0
 DockId=0x00000016
 
+[Window][Build project]
+Pos=277,185
+Size=525,350
+Collapsed=0
+
 [Docking][Data]
-DockSpace           ID=0x1F304E58 Window=0xFE8C7A15 Pos=190,202 Size=700,391 Split=Y
+DockSpace           ID=0x1F304E58 Pos=191,167 Size=700,407 Split=Y
   DockNode          ID=0x00000013 Parent=0x1F304E58 SizeRef=700,344 Split=X
     DockNode        ID=0x00000011 Parent=0x00000013 SizeRef=149,407 Selected=0xDABAF74A
     DockNode        ID=0x00000012 Parent=0x00000013 SizeRef=549,407 Split=Y
