Added FPS locker

--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -175,11 +175,6 @@ Size=327,446
 Collapsed=0
 DockId=0x085D2BD9,2
 
-[Window][Tasks]
-Pos=707,570
-Size=373,100
-Collapsed=0
-
 [Docking][Data]
 DockSpace             ID=0x085D2BD9 Window=0x289D2C3F Pos=562,61 Size=327,446 CentralNode=1 Selected=0xEDC13103
 DockSpace             ID=0x1F304E58 Pos=191,167 Size=700,407 Split=Y
@@ -203,12 +198,12 @@ DockSpace             ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 Spl
       DockNode        ID=0x00000007 Parent=0x00000006 SizeRef=1662,725 Split=X
         DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=224,957 Selected=0x3EECD7B2
         DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=1436,957 Split=X
-          DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=1176,970 Split=X Selected=0x772F22E0
-            DockNode  ID=0x00000019 Parent=0x00000001 SizeRef=334,464 CentralNode=1 Selected=0x772F22E0
+          DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=1176,970 Split=X Selected=0xEC9B321F
+            DockNode  ID=0x00000019 Parent=0x00000001 SizeRef=334,464 CentralNode=1 Selected=0xEC9B321F
             DockNode  ID=0x0000001A Parent=0x00000001 SizeRef=327,464 Selected=0x289D2C3F
           DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=189,970 Selected=0xF02CD328
       DockNode        ID=0x00000008 Parent=0x00000006 SizeRef=1662,172 Split=X Selected=0x6D97690D
         DockNode      ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
-        DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0x6D97690D
+        DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0xB7722E25
     DockNode          ID=0x0000000A Parent=0x0000000C SizeRef=1582,37 HiddenTabBar=1 Selected=0xAE51DE0E
 
