--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -34,9 +34,9 @@ DockId=0x00000002,0
 
 [Window][Scene2D view]
 Pos=226,43
-Size=334,464
+Size=663,464
 Collapsed=0
-DockId=0x00000019,0
+DockId=0x00000001,0
 
 [Window][Log]
 Pos=215,509
@@ -57,9 +57,9 @@ Collapsed=0
 
 [Window][Game view]
 Pos=226,43
-Size=334,464
+Size=663,464
 Collapsed=0
-DockId=0x00000019,1
+DockId=0x00000001,1
 
 [Window][Choose directory]
 Pos=365,185
@@ -152,58 +152,56 @@ Collapsed=0
 DockId=0x00000016
 
 [Window][Debugger]
-Pos=562,43
-Size=327,464
+Pos=226,43
+Size=663,464
 Collapsed=0
-DockId=0x0000001A,0
+DockId=0x00000001,2
 
 [Window][CPU]
-Pos=562,61
-Size=327,446
+Pos=235,66
+Size=645,436
 Collapsed=0
 DockId=0x085D2BD9,1
 
 [Window][GPU]
-Pos=562,61
-Size=327,446
+Pos=235,66
+Size=645,436
 Collapsed=0
 DockId=0x085D2BD9,0
 
 [Window][Memory]
-Pos=562,61
-Size=327,446
+Pos=235,66
+Size=645,436
 Collapsed=0
 DockId=0x085D2BD9,2
 
 [Docking][Data]
-DockSpace             ID=0x085D2BD9 Window=0x289D2C3F Pos=562,61 Size=327,446 CentralNode=1 Selected=0xEDC13103
-DockSpace             ID=0x1F304E58 Pos=191,167 Size=700,407 Split=Y
-  DockNode            ID=0x00000013 Parent=0x1F304E58 SizeRef=700,344 Split=X
-    DockNode          ID=0x00000011 Parent=0x00000013 SizeRef=149,407 Selected=0xDABAF74A
-    DockNode          ID=0x00000012 Parent=0x00000013 SizeRef=549,407 Split=Y
-      DockNode        ID=0x0000000F Parent=0x00000012 SizeRef=700,351 Split=X
-        DockNode      ID=0x0000000D Parent=0x0000000F SizeRef=148,407 Selected=0xF1AF874A
-        DockNode      ID=0x0000000E Parent=0x0000000F SizeRef=550,407 CentralNode=1 Selected=0xAC3E4146
-      DockNode        ID=0x00000010 Parent=0x00000012 SizeRef=700,54 Selected=0x933B30C4
-  DockNode            ID=0x00000014 Parent=0x1F304E58 SizeRef=700,61 Selected=0x1CDC61F4
-DockSpace             ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
-  DockNode            ID=0x00000017 Parent=0xA8CBEDD7 SizeRef=700,341 Split=X
-    DockNode          ID=0x00000015 Parent=0x00000017 SizeRef=155,407 Selected=0x2A819510
-    DockNode          ID=0x00000016 Parent=0x00000017 SizeRef=543,407 CentralNode=1 Selected=0x23415D8D
-  DockNode            ID=0x00000018 Parent=0xA8CBEDD7 SizeRef=700,64 Selected=0x069E6D0D
-DockSpace             ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 Split=Y
-  DockNode            ID=0x0000000B Parent=0xF990106D SizeRef=982,23 Selected=0x5A90505A
-  DockNode            ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
-    DockNode          ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
-      DockNode        ID=0x00000007 Parent=0x00000006 SizeRef=1662,725 Split=X
-        DockNode      ID=0x00000003 Parent=0x00000007 SizeRef=224,957 Selected=0x3EECD7B2
-        DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=1436,957 Split=X
-          DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=1176,970 Split=X Selected=0xEC9B321F
-            DockNode  ID=0x00000019 Parent=0x00000001 SizeRef=334,464 CentralNode=1 Selected=0xEC9B321F
-            DockNode  ID=0x0000001A Parent=0x00000001 SizeRef=327,464 Selected=0x289D2C3F
-          DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=189,970 Selected=0xF02CD328
-      DockNode        ID=0x00000008 Parent=0x00000006 SizeRef=1662,172 Split=X Selected=0x6D97690D
-        DockNode      ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
-        DockNode      ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0xB7722E25
-    DockNode          ID=0x0000000A Parent=0x0000000C SizeRef=1582,37 HiddenTabBar=1 Selected=0xAE51DE0E
+DockSpace           ID=0x085D2BD9 Pos=235,66 Size=645,436 CentralNode=1 Selected=0x2B2EBA78
+DockSpace           ID=0x1F304E58 Pos=191,167 Size=700,407 Split=Y
+  DockNode          ID=0x00000013 Parent=0x1F304E58 SizeRef=700,344 Split=X
+    DockNode        ID=0x00000011 Parent=0x00000013 SizeRef=149,407 Selected=0xDABAF74A
+    DockNode        ID=0x00000012 Parent=0x00000013 SizeRef=549,407 Split=Y
+      DockNode      ID=0x0000000F Parent=0x00000012 SizeRef=700,351 Split=X
+        DockNode    ID=0x0000000D Parent=0x0000000F SizeRef=148,407 Selected=0xF1AF874A
+        DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=550,407 CentralNode=1 Selected=0xAC3E4146
+      DockNode      ID=0x00000010 Parent=0x00000012 SizeRef=700,54 Selected=0x933B30C4
+  DockNode          ID=0x00000014 Parent=0x1F304E58 SizeRef=700,61 Selected=0x1CDC61F4
+DockSpace           ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
+  DockNode          ID=0x00000017 Parent=0xA8CBEDD7 SizeRef=700,341 Split=X
+    DockNode        ID=0x00000015 Parent=0x00000017 SizeRef=155,407 Selected=0x2A819510
+    DockNode        ID=0x00000016 Parent=0x00000017 SizeRef=543,407 CentralNode=1 Selected=0x23415D8D
+  DockNode          ID=0x00000018 Parent=0xA8CBEDD7 SizeRef=700,64 Selected=0x069E6D0D
+DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 Split=Y
+  DockNode          ID=0x0000000B Parent=0xF990106D SizeRef=982,23 Selected=0x5A90505A
+  DockNode          ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
+    DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
+      DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,725 Split=X
+        DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=224,957 Selected=0x3EECD7B2
+        DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1436,957 Split=X
+          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1176,970 CentralNode=1 Selected=0xEC9B321F
+          DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=189,970 Selected=0xF02CD328
+      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,172 Split=X Selected=0x6D97690D
+        DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
+        DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0xB7722E25
+    DockNode        ID=0x0000000A Parent=0x0000000C SizeRef=1582,37 HiddenTabBar=1 Selected=0xAE51DE0E
 
