--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace demo]
 Pos=0,0
-Size=7,18
+Size=1600,837
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,44 +9,44 @@ Size=400,400
 Collapsed=0
 
 [Window][Scene2D tree]
-Pos=0,21
-Size=1,1
+Pos=0,47
+Size=216,561
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=0,23
-Size=1,1
+Pos=0,610
+Size=316,194
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=3,23
-Size=1,1
+Pos=318,610
+Size=1282,194
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=5,21
-Size=7,1
+Pos=1411,47
+Size=189,561
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
-Pos=3,21
-Size=1,1
+Pos=218,47
+Size=1191,561
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Log]
-Pos=3,23
-Size=1,1
+Pos=318,610
+Size=1282,194
 Collapsed=0
 DockId=0x00000009,1
 
 [Window][BottomMenu]
-Pos=0,23
-Size=4,1
+Pos=0,806
+Size=1600,31
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -56,8 +56,8 @@ Size=350,350
 Collapsed=0
 
 [Window][Game view]
-Pos=3,21
-Size=1,1
+Pos=218,47
+Size=1191,561
 Collapsed=0
 DockId=0x00000001,1
 
@@ -73,7 +73,7 @@ Collapsed=0
 
 [Window][Toolbar View]
 Pos=0,18
-Size=4,1
+Size=1600,27
 Collapsed=0
 DockId=0x0000000B
 
@@ -176,8 +176,13 @@ Collapsed=0
 DockId=0x085D2BD9,2
 
 [Window][Build project]
-Pos=277,185
+Pos=537,243
 Size=525,350
+Collapsed=0
+
+[Window][Tasks]
+Pos=1326,687
+Size=274,100
 Collapsed=0
 
 [Docking][Data]
@@ -196,16 +201,16 @@ DockSpace           ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
     DockNode        ID=0x00000015 Parent=0x00000017 SizeRef=155,407 Selected=0x2A819510
     DockNode        ID=0x00000016 Parent=0x00000017 SizeRef=543,407 CentralNode=1 Selected=0x23415D8D
   DockNode          ID=0x00000018 Parent=0xA8CBEDD7 SizeRef=700,64 Selected=0x069E6D0D
-DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=4,4 Split=Y
+DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1600,819 Split=Y
   DockNode          ID=0x0000000B Parent=0xF990106D SizeRef=982,32 Selected=0x5A90505A
   DockNode          ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
-      DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,725 Split=X
+      DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,480 Split=X
         DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=224,957 Selected=0x3EECD7B2
         DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1436,957 Split=X
-          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=625,970 CentralNode=1 Selected=0x772F22E0
-          DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=306,970 Selected=0xF02CD328
-      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,172 Split=X Selected=0x6D97690D
+          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1176,970 CentralNode=1 Selected=0x772F22E0
+          DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=189,970 Selected=0xF02CD328
+      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,166 Split=X Selected=0x6D97690D
         DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
         DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0xB7722E25
     DockNode        ID=0x0000000A Parent=0x0000000C SizeRef=1582,37 HiddenTabBar=1 Selected=0xAE51DE0E
