Updated AssetManager logic. Added data classes. Optimized

--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -27,14 +27,14 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=681,43
-Size=399,522
+Pos=816,43
+Size=264,522
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
 Pos=147,43
-Size=532,522
+Size=667,522
 Collapsed=0
 DockId=0x00000001,0
 
@@ -57,7 +57,7 @@ Collapsed=0
 
 [Window][Game view]
 Pos=147,43
-Size=532,522
+Size=667,522
 Collapsed=0
 DockId=0x00000001,1
 
@@ -195,13 +195,13 @@ DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 Split
   DockNode          ID=0x0000000B Parent=0xF990106D SizeRef=982,32 Selected=0x5A90505A
   DockNode          ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
-      DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,725 Split=X
+      DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,522 Split=X
         DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=224,957 Selected=0x3EECD7B2
         DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1436,957 Split=X
-          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=532,970 CentralNode=1 Selected=0x772F22E0
-          DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=399,970 Selected=0xF02CD328
-      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,172 Split=X Selected=0x6D97690D
+          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=667,970 CentralNode=1 Selected=0x772F22E0
+          DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=264,970 Selected=0xF02CD328
+      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,124 Split=X Selected=0x6D97690D
         DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
-        DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0x6D97690D
+        DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0xB7722E25
     DockNode        ID=0x0000000A Parent=0x0000000C SizeRef=1582,37 HiddenTabBar=1 Selected=0xAE51DE0E
 
