--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace demo]
 Pos=0,0
-Size=1080,720
+Size=1600,837
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,44 +9,44 @@ Size=400,400
 Collapsed=0
 
 [Window][Scene2D tree]
-Pos=0,43
-Size=145,522
+Pos=0,47
+Size=216,610
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=0,567
-Size=213,124
+Pos=0,659
+Size=316,145
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=215,567
-Size=865,124
+Pos=318,659
+Size=1282,145
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=832,43
-Size=248,522
+Pos=1257,47
+Size=343,610
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
-Pos=147,43
-Size=683,522
+Pos=218,47
+Size=1037,610
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Log]
-Pos=215,567
-Size=865,124
+Pos=318,659
+Size=1282,145
 Collapsed=0
 DockId=0x00000009,1
 
 [Window][BottomMenu]
-Pos=0,693
-Size=1080,27
+Pos=0,806
+Size=1600,31
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -56,8 +56,8 @@ Size=350,350
 Collapsed=0
 
 [Window][Game view]
-Pos=147,43
-Size=683,522
+Pos=218,47
+Size=1037,610
 Collapsed=0
 DockId=0x00000001,1
 
@@ -73,7 +73,7 @@ Collapsed=0
 
 [Window][Toolbar View]
 Pos=0,18
-Size=1080,23
+Size=1600,27
 Collapsed=0
 DockId=0x0000000B
 
@@ -191,15 +191,15 @@ DockSpace           ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
     DockNode        ID=0x00000015 Parent=0x00000017 SizeRef=155,407 Selected=0x2A819510
     DockNode        ID=0x00000016 Parent=0x00000017 SizeRef=543,407 CentralNode=1 Selected=0x23415D8D
   DockNode          ID=0x00000018 Parent=0xA8CBEDD7 SizeRef=700,64 Selected=0x069E6D0D
-DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 Split=Y
+DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1600,819 Split=Y
   DockNode          ID=0x0000000B Parent=0xF990106D SizeRef=982,32 Selected=0x5A90505A
   DockNode          ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
       DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,725 Split=X
         DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=224,957 Selected=0x3EECD7B2
         DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1436,957 Split=X
-          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=683,970 CentralNode=1 Selected=0x772F22E0
-          DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=248,970 Selected=0xF02CD328
+          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1037,970 CentralNode=1 Selected=0xEC9B321F
+          DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=343,970 Selected=0xF02CD328
       DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,172 Split=X Selected=0x6D97690D
         DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
         DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0x6D97690D
