--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -10,37 +10,37 @@ Collapsed=0
 
 [Window][Scene2D tree]
 Pos=0,47
-Size=216,610
+Size=216,534
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=0,659
-Size=316,145
+Pos=0,583
+Size=316,221
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=318,659
-Size=1282,145
+Pos=318,583
+Size=1282,221
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=1257,47
-Size=343,610
+Pos=1273,47
+Size=327,534
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
 Pos=218,47
-Size=1037,610
+Size=1053,534
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Log]
-Pos=318,659
-Size=1282,145
+Pos=318,583
+Size=1282,221
 Collapsed=0
 DockId=0x00000009,1
 
@@ -57,7 +57,7 @@ Collapsed=0
 
 [Window][Game view]
 Pos=218,47
-Size=1037,610
+Size=1053,534
 Collapsed=0
 DockId=0x00000001,1
 
@@ -195,13 +195,13 @@ DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1600,819 Split
   DockNode          ID=0x0000000B Parent=0xF990106D SizeRef=982,32 Selected=0x5A90505A
   DockNode          ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
-      DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,725 Split=X
+      DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,534 Split=X
         DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=224,957 Selected=0x3EECD7B2
         DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1436,957 Split=X
-          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1037,970 CentralNode=1 Selected=0xEC9B321F
-          DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=343,970 Selected=0xF02CD328
-      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,172 Split=X Selected=0x6D97690D
+          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=677,970 CentralNode=1 Selected=0x772F22E0
+          DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=327,970 Selected=0xF02CD328
+      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,221 Split=X Selected=0x6D97690D
         DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
-        DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0x6D97690D
+        DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0xB7722E25
     DockNode        ID=0x0000000A Parent=0x0000000C SizeRef=1582,37 HiddenTabBar=1 Selected=0xAE51DE0E
 
