--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -10,37 +10,37 @@ Collapsed=0
 
 [Window][Scene2D tree]
 Pos=0,47
-Size=216,534
+Size=216,526
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=0,583
-Size=316,221
+Pos=0,575
+Size=316,229
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=318,583
-Size=1282,221
+Pos=318,575
+Size=1282,229
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=1273,47
-Size=327,534
+Pos=1411,47
+Size=189,526
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
 Pos=218,47
-Size=1053,534
+Size=1191,526
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Log]
-Pos=318,583
-Size=1282,221
+Pos=318,575
+Size=1282,229
 Collapsed=0
 DockId=0x00000009,1
 
@@ -57,7 +57,7 @@ Collapsed=0
 
 [Window][Game view]
 Pos=218,47
-Size=1053,534
+Size=1191,526
 Collapsed=0
 DockId=0x00000001,1
 
@@ -106,24 +106,24 @@ Size=700,425
 Collapsed=0
 
 [Window][Engine settings##Engine]
-Pos=191,149
+Pos=190,147
 Size=700,425
 Collapsed=0
 
 [Window][MiniMenu##Engine]
-Pos=191,513
+Pos=190,511
 Size=700,61
 Collapsed=0
 DockId=0x00000014
 
 [Window][SideTabs##Engine]
-Pos=191,167
+Pos=190,165
 Size=149,344
 Collapsed=0
 DockId=0x00000011
 
 [Window][MainSettingsView##Engine]
-Pos=342,167
+Pos=341,165
 Size=549,344
 Collapsed=0
 DockId=0x0000000E
@@ -175,9 +175,19 @@ Size=645,436
 Collapsed=0
 DockId=0x085D2BD9,2
 
+[Window][Create scene]
+Pos=537,243
+Size=525,350
+Collapsed=0
+
+[Window][Tasks]
+Pos=1332,687
+Size=268,100
+Collapsed=0
+
 [Docking][Data]
 DockSpace           ID=0x085D2BD9 Pos=235,66 Size=645,436 CentralNode=1 Selected=0x2B2EBA78
-DockSpace           ID=0x1F304E58 Pos=191,167 Size=700,407 Split=Y
+DockSpace           ID=0x1F304E58 Window=0xFE8C7A15 Pos=190,165 Size=700,407 Split=Y
   DockNode          ID=0x00000013 Parent=0x1F304E58 SizeRef=700,344 Split=X
     DockNode        ID=0x00000011 Parent=0x00000013 SizeRef=149,407 Selected=0xDABAF74A
     DockNode        ID=0x00000012 Parent=0x00000013 SizeRef=549,407 Split=Y
@@ -195,12 +205,12 @@ DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1600,819 Split
   DockNode          ID=0x0000000B Parent=0xF990106D SizeRef=982,32 Selected=0x5A90505A
   DockNode          ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
-      DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,534 Split=X
+      DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,526 Split=X
         DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=224,957 Selected=0x3EECD7B2
         DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1436,957 Split=X
-          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=677,970 CentralNode=1 Selected=0x772F22E0
-          DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=327,970 Selected=0xF02CD328
-      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,221 Split=X Selected=0x6D97690D
+          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1176,970 CentralNode=1 Selected=0x772F22E0
+          DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=189,970 Selected=0xF02CD328
+      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,229 Split=X Selected=0x6D97690D
         DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
         DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0xB7722E25
     DockNode        ID=0x0000000A Parent=0x0000000C SizeRef=1582,37 HiddenTabBar=1 Selected=0xAE51DE0E
