--- a/Engine/imgui.ini
+++ b/Engine/imgui.ini
@@ -10,37 +10,37 @@ Collapsed=0
 
 [Window][Scene2D tree]
 Pos=0,43
-Size=145,522
+Size=145,436
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=0,567
-Size=213,124
+Pos=0,481
+Size=213,210
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=215,567
-Size=865,124
+Pos=215,481
+Size=865,210
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
 Pos=733,43
-Size=347,522
+Size=347,436
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
 Pos=147,43
-Size=584,522
+Size=584,436
 Collapsed=0
 DockId=0x00000001,0
 
 [Window][Log]
-Pos=215,567
-Size=865,124
+Pos=215,481
+Size=865,210
 Collapsed=0
 DockId=0x00000009,1
 
@@ -57,7 +57,7 @@ Collapsed=0
 
 [Window][Game view]
 Pos=147,43
-Size=584,522
+Size=584,436
 Collapsed=0
 DockId=0x00000001,1
 
@@ -176,14 +176,14 @@ Collapsed=0
 DockId=0x085D2BD9,2
 
 [Window][Components]
-Pos=725,162
-Size=347,522
+Pos=742,234
+Size=347,436
 Collapsed=0
 DockId=0x9F6C4150,0
 
 [Window][Systems]
-Pos=725,162
-Size=347,522
+Pos=742,234
+Size=347,436
 Collapsed=0
 DockId=0x9F6C4150,1
 
@@ -198,7 +198,7 @@ DockSpace           ID=0x1F304E58 Pos=191,167 Size=700,407 Split=Y
         DockNode    ID=0x0000000E Parent=0x0000000F SizeRef=550,407 CentralNode=1 Selected=0xAC3E4146
       DockNode      ID=0x00000010 Parent=0x00000012 SizeRef=700,54 Selected=0x933B30C4
   DockNode          ID=0x00000014 Parent=0x1F304E58 SizeRef=700,61 Selected=0x1CDC61F4
-DockSpace           ID=0x9F6C4150 Pos=725,162 Size=347,522 CentralNode=1 Selected=0xAE10E12E
+DockSpace           ID=0x9F6C4150 Window=0xF8AAECE4 Pos=742,234 Size=347,436 CentralNode=1 Selected=0xAE10E12E
 DockSpace           ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
   DockNode          ID=0x00000017 Parent=0xA8CBEDD7 SizeRef=700,341 Split=X
     DockNode        ID=0x00000015 Parent=0x00000017 SizeRef=155,407 Selected=0x2A819510
@@ -208,13 +208,13 @@ DockSpace           ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 Split
   DockNode          ID=0x0000000B Parent=0xF990106D SizeRef=982,32 Selected=0x5A90505A
   DockNode          ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode        ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
-      DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,725 Split=X
+      DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=1662,436 Split=X
         DockNode    ID=0x00000003 Parent=0x00000007 SizeRef=224,957 Selected=0x3EECD7B2
         DockNode    ID=0x00000005 Parent=0x00000007 SizeRef=1436,957 Split=X
-          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1864,970 CentralNode=1 Selected=0xEC9B321F
+          DockNode  ID=0x00000001 Parent=0x00000005 SizeRef=1864,970 CentralNode=1 Selected=0x772F22E0
           DockNode  ID=0x00000002 Parent=0x00000005 SizeRef=347,970 Selected=0xF02CD328
-      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,172 Split=X Selected=0x6D97690D
+      DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=1662,210 Split=X Selected=0x6D97690D
         DockNode    ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
-        DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0x6D97690D
+        DockNode    ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0xB7722E25
     DockNode        ID=0x0000000A Parent=0x0000000C SizeRef=1582,37 HiddenTabBar=1 Selected=0xAE51DE0E
 
