--- a/Core2D/build.gradle
+++ b/Core2D/build.gradle
@@ -6,10 +6,6 @@ group 'sungear'
 version '1.0-SNAPSHOT'
 version ''
 
-repositories {
-    mavenCentral()
-}
-
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
@@ -44,6 +40,7 @@ repositories {
     flatDir {
         dirs 'libs'
     }
+    mavenCentral()
 }
 
 dependencies {
@@ -51,7 +48,7 @@ dependencies {
     implementation name: 'commons-io-2.11.0'
     implementation name: 'gson-2.9.0'
     implementation name: 'jbox2d-library-2.1.2.2'
-    implementation name: 'joml-1.10.2'
+    implementation 'org.joml:joml:1.10.5'
     //implementation files('libs/joml-1.10.2.jar')
     implementation name: 'lwjgl'
     implementation name: 'lwjgl-glfw'
