--- a/imgui.ini
+++ b/imgui.ini
@@ -187,8 +187,8 @@ Size=347,522
 Collapsed=0
 DockId=0x9F6C4150,1
 
-[Window][Build project]
-Pos=278,185
+[Window][New project]
+Pos=277,186
 Size=525,350
 Collapsed=0
 
@@ -204,7 +204,7 @@ DockSpace           ID=0x1F304E58 Pos=191,167 Size=700,407 Split=Y
       DockNode      ID=0x00000010 Parent=0x00000012 SizeRef=700,54 Selected=0x933B30C4
   DockNode          ID=0x00000014 Parent=0x1F304E58 SizeRef=700,61 Selected=0x1CDC61F4
 DockSpace           ID=0x9F6C4150 Pos=725,162 Size=347,522 CentralNode=1 Selected=0xAE10E12E
-DockSpace           ID=0xA8CBEDD7 Window=0xE4A3AAD6 Pos=190,165 Size=700,407 Split=Y
+DockSpace           ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
   DockNode          ID=0x00000017 Parent=0xA8CBEDD7 SizeRef=700,341 Split=X
     DockNode        ID=0x00000015 Parent=0x00000017 SizeRef=155,407 Selected=0x2A819510
     DockNode        ID=0x00000016 Parent=0x00000017 SizeRef=543,407 CentralNode=1 Selected=0x23415D8D
