--- a/Engine/build.gradle
+++ b/Engine/build.gradle
@@ -63,3 +63,7 @@ dependencies {
     implementation project(':common')
     implementation name: 'imgui-app-1.84.1.3'
 }
+
+task prepareKotlinBuildScriptModel {
+
+}
