--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Dockspace demo]
 Pos=0,0
-Size=2560,1377
+Size=1080,720
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,44 +9,44 @@ Size=400,400
 Collapsed=0
 
 [Window][Scene2D tree]
-Pos=0,65
-Size=524,894
+Pos=0,43
+Size=221,460
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=0,961
-Size=505,362
+Pos=0,505
+Size=213,186
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=507,961
-Size=2053,362
+Pos=215,505
+Size=865,186
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
-Pos=2265,65
-Size=295,894
+Pos=956,43
+Size=124,460
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
-Pos=526,65
-Size=1737,894
+Pos=223,43
+Size=731,460
 Collapsed=0
 DockId=0x0000001B,0
 
 [Window][Log]
-Pos=507,961
-Size=2053,362
+Pos=215,505
+Size=865,186
 Collapsed=0
 DockId=0x00000009,1
 
 [Window][BottomMenu]
-Pos=0,1325
-Size=2560,52
+Pos=0,693
+Size=1080,27
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -56,8 +56,8 @@ Size=350,350
 Collapsed=0
 
 [Window][Game view]
-Pos=526,65
-Size=1737,894
+Pos=223,43
+Size=731,460
 Collapsed=0
 DockId=0x0000001B,1
 
@@ -73,7 +73,7 @@ Collapsed=0
 
 [Window][Toolbar View]
 Pos=0,18
-Size=2560,45
+Size=1080,23
 Collapsed=0
 DockId=0x0000000B
 
@@ -330,7 +330,7 @@ DockSpace               ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
     DockNode            ID=0x00000015 Parent=0x00000017 SizeRef=155,407 Selected=0x2A819510
     DockNode            ID=0x00000016 Parent=0x00000017 SizeRef=543,407 CentralNode=1 Selected=0x23415D8D
   DockNode              ID=0x00000018 Parent=0xA8CBEDD7 SizeRef=700,64 Selected=0x069E6D0D
-DockSpace               ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=2560,1359 Split=Y
+DockSpace               ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 Split=Y
   DockNode              ID=0x0000000B Parent=0xF990106D SizeRef=982,32 Selected=0x5A90505A
   DockNode              ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode            ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
@@ -340,11 +340,11 @@ DockSpace               ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=2560,1359 
           DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=731,970 Split=X Selected=0xEC9B321F
             DockNode    ID=0x00000019 Parent=0x00000001 SizeRef=172,1015 Selected=0x289D2C3F
             DockNode    ID=0x0000001A Parent=0x00000001 SizeRef=1420,1015 Split=X Selected=0xEC9B321F
-              DockNode  ID=0x0000001B Parent=0x0000001A SizeRef=318,1015 CentralNode=1 Selected=0x772F22E0
+              DockNode  ID=0x0000001B Parent=0x0000001A SizeRef=318,1015 CentralNode=1 Selected=0xEC9B321F
               DockNode  ID=0x0000001C Parent=0x0000001A SizeRef=212,1015 Selected=0xF3BD85C8
           DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=124,970 Selected=0xF02CD328
       DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1662,186 Split=X Selected=0x6D97690D
         DockNode        ID=0x00000004 Parent=0x00000008 SizeRef=328,145 Selected=0xED1C3A22
-        DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0xB7722E25
+        DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=1332,145 Selected=0x6D97690D
     DockNode            ID=0x0000000A Parent=0x0000000C SizeRef=1582,37 HiddenTabBar=1 Selected=0xAE51DE0E
 
