Updated shaders editor and shaders

--- a/imgui.ini
+++ b/imgui.ini
@@ -10,37 +10,37 @@ Collapsed=0
 
 [Window][Scene2D tree]
 Pos=0,52
-Size=136,455
+Size=136,409
 Collapsed=0
 DockId=0x00000003,0
 
 [Window][Project tree]
-Pos=0,509
-Size=213,172
+Pos=0,463
+Size=213,218
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Resources]
-Pos=215,509
-Size=865,172
+Pos=215,463
+Size=865,218
 Collapsed=0
 DockId=0x00000009,0
 
 [Window][Inspector]
 Pos=653,52
-Size=427,455
+Size=427,409
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Scene2D view]
 Pos=138,52
-Size=207,455
+Size=513,409
 Collapsed=0
 DockId=0x0000001B,0
 
 [Window][Log]
-Pos=215,509
-Size=865,172
+Pos=215,463
+Size=865,218
 Collapsed=0
 DockId=0x00000009,1
 
@@ -57,7 +57,7 @@ Collapsed=0
 
 [Window][Game view]
 Pos=138,52
-Size=207,455
+Size=513,409
 Collapsed=0
 DockId=0x0000001B,1
 
@@ -177,7 +177,7 @@ DockId=0x085D2BD9,2
 
 [Window][Components]
 Pos=662,176
-Size=427,455
+Size=427,409
 Collapsed=0
 DockId=0x9F6C4150,0
 
@@ -194,14 +194,14 @@ Collapsed=0
 DockId=0x0000001B,2
 
 [Window][Shaders Editor]
-Pos=347,52
-Size=304,455
+Pos=5,21
+Size=7,1
 Collapsed=0
 DockId=0x0000001C,0
 
 [Window][velocitites]
-Pos=74,340
-Size=202,198
+Pos=73,130
+Size=202,293
 Collapsed=0
 
 [Window][PPLayer "slaysLayer"]
@@ -248,26 +248,47 @@ Size=350,350
 Collapsed=0
 
 [Window][Sample.glsl]
-Pos=435,70
-Size=216,437
+Pos=1824,70
+Size=307,1094
 Collapsed=0
 DockId=0x353BF52F,0
 
 [Window][Uniforms]
-Pos=347,88
-Size=298,419
+Pos=1832,88
+Size=299,1030
 Collapsed=0
-DockId=0x2F8EF246,0
+DockId=0x3BDE5AF8,0
 
 [Window][Defines]
-Pos=347,88
-Size=298,419
+Pos=1832,88
+Size=299,1030
 Collapsed=0
-DockId=0x2F8EF246,1
+DockId=0x3BDE5AF8,1
 
 [Window][default_shader.glsl]
-Pos=347,70
-Size=304,437
+Pos=1832,70
+Size=299,1129
+Collapsed=0
+DockId=0x353BF52F,0
+
+[Window][New Directory]
+Pos=277,185
+Size=525,350
+Collapsed=0
+
+[Window][Create scene]
+Pos=277,185
+Size=525,350
+Collapsed=0
+
+[Window][New Java.Component file]
+Pos=277,185
+Size=525,350
+Collapsed=0
+
+[Window][SlaysPPShader.glsl]
+Pos=5,39
+Size=4,4
 Collapsed=0
 DockId=0x353BF52F,0
 
@@ -282,9 +303,9 @@ DockSpace               ID=0x1F304E58 Pos=930,494 Size=700,407 Split=Y
         DockNode        ID=0x0000000E Parent=0x0000000F SizeRef=550,407 CentralNode=1 Selected=0xAC3E4146
       DockNode          ID=0x00000010 Parent=0x00000012 SizeRef=700,54 Selected=0x933B30C4
   DockNode              ID=0x00000014 Parent=0x1F304E58 SizeRef=700,61 Selected=0x1CDC61F4
-DockSpace               ID=0x2F8EF246 Window=0x43824DDF Pos=347,88 Size=298,419 CentralNode=1 Selected=0xB68273D7
-DockSpace               ID=0x353BF52F Window=0xF3BD85C8 Pos=347,70 Size=304,437 CentralNode=1 Selected=0x43824DDF
-DockSpace               ID=0x9F6C4150 Window=0xF8AAECE4 Pos=662,176 Size=427,455 CentralNode=1 Selected=0xA115F62D
+DockSpace               ID=0x353BF52F Pos=5,39 Size=4,4 CentralNode=1 Selected=0xC1DC4B6C
+DockSpace               ID=0x3BDE5AF8 Pos=1832,88 Size=299,1030 CentralNode=1 Selected=0xB68273D7
+DockSpace               ID=0x9F6C4150 Window=0xF8AAECE4 Pos=662,176 Size=427,409 CentralNode=1 Selected=0xA115F62D
 DockSpace               ID=0xA8CBEDD7 Pos=190,165 Size=700,407 Split=Y
   DockNode              ID=0x00000017 Parent=0xA8CBEDD7 SizeRef=700,341 Split=X
     DockNode            ID=0x00000015 Parent=0x00000017 SizeRef=155,407 Selected=0x2A819510
@@ -294,17 +315,17 @@ DockSpace               ID=0xF990106D Window=0xA9281B80 Pos=0,18 Size=1080,702 S
   DockNode              ID=0x0000000B Parent=0xF990106D SizeRef=982,32 Selected=0x5A90505A
   DockNode              ID=0x0000000C Parent=0xF990106D SizeRef=982,938 Split=Y
     DockNode            ID=0x00000006 Parent=0x0000000C SizeRef=1582,899 Split=Y
-      DockNode          ID=0x00000007 Parent=0x00000006 SizeRef=1662,455 Split=X
+      DockNode          ID=0x00000007 Parent=0x00000006 SizeRef=1662,409 Split=X
         DockNode        ID=0x00000003 Parent=0x00000007 SizeRef=136,957 Selected=0x3EECD7B2
-        DockNode        ID=0x00000005 Parent=0x00000007 SizeRef=2422,957 Split=X
-          DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=1993,970 Split=X Selected=0xEC9B321F
+        DockNode        ID=0x00000005 Parent=0x00000007 SizeRef=942,957 Split=X
+          DockNode      ID=0x00000001 Parent=0x00000005 SizeRef=513,970 Split=X Selected=0xEC9B321F
             DockNode    ID=0x00000019 Parent=0x00000001 SizeRef=245,455 Selected=0x289D2C3F
             DockNode    ID=0x0000001A Parent=0x00000001 SizeRef=1312,455 Split=X Selected=0xEC9B321F
-              DockNode  ID=0x0000001B Parent=0x0000001A SizeRef=207,455 CentralNode=1 Selected=0x772F22E0
-              DockNode  ID=0x0000001C Parent=0x0000001A SizeRef=304,455 Selected=0xF3BD85C8
+              DockNode  ID=0x0000001B Parent=0x0000001A SizeRef=1692,455 CentralNode=1 Selected=0xEC9B321F
+              DockNode  ID=0x0000001C Parent=0x0000001A SizeRef=299,455 Selected=0xF3BD85C8
           DockNode      ID=0x00000002 Parent=0x00000005 SizeRef=427,970 Selected=0xF02CD328
-      DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1662,172 Split=X Selected=0x6D97690D
+      DockNode          ID=0x00000008 Parent=0x00000006 SizeRef=1662,218 Split=X Selected=0x6D97690D
         DockNode        ID=0x00000004 Parent=0x00000008 SizeRef=505,145 Selected=0xED1C3A22
-        DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=2053,145 Selected=0x6D97690D
+        DockNode        ID=0x00000009 Parent=0x00000008 SizeRef=2053,145 Selected=0xB7722E25
     DockNode            ID=0x0000000A Parent=0x0000000C SizeRef=1582,37 HiddenTabBar=1 Selected=0xAE51DE0E
 
