--- a/Engine/Projects/new_kakish/AssetManager.am
+++ b/Engine/Projects/new_kakish/AssetManager.am
@@ -3,14 +3,6 @@
     {
       "assetObject": {
         "lastModified": -1,
-        "path": "/data/shaders/mesh/default_shader.glsl"
-      },
-      "path": "/data/shaders/mesh/default_shader.glsl",
-      "assetObjectClassName": "Core2D.DataClasses.ShaderData"
-    },
-    {
-      "assetObject": {
-        "lastModified": -1,
         "path": "/data/shaders/mesh/instancing_shader.glsl"
       },
       "path": "/data/shaders/mesh/instancing_shader.glsl",
@@ -38,14 +30,6 @@
         "path": "/data/shaders/primitives/line2D/instancing/shader.glsl"
       },
       "path": "/data/shaders/primitives/line2D/instancing/shader.glsl",
-      "assetObjectClassName": "Core2D.DataClasses.ShaderData"
-    },
-    {
-      "assetObject": {
-        "lastModified": -1,
-        "path": "/data/shaders/postprocessing/postprocessing_default_shader.glsl"
-      },
-      "path": "/data/shaders/postprocessing/postprocessing_default_shader.glsl",
       "assetObjectClassName": "Core2D.DataClasses.ShaderData"
     },
     {
@@ -166,11 +150,19 @@
     },
     {
       "assetObject": {
-        "lastModified": 1678639308291,
-        "path": "shaders\\Sample.glsl"
+        "lastModified": 1678743323774,
+        "path": "Scripts\\SpaceDeformationComponent.class"
       },
-      "path": "shaders\\Sample.glsl",
-      "assetObjectClassName": "Core2D.DataClasses.ShaderData"
+      "path": "Scripts\\SpaceDeformationComponent.class",
+      "assetObjectClassName": "Core2D.DataClasses.ScriptData"
+    },
+    {
+      "assetObject": {
+        "lastModified": 1679258949776,
+        "path": "Scripts\\test\\dfdf.java"
+      },
+      "path": "Scripts\\test\\dfdf.java",
+      "assetObjectClassName": "Core2D.DataClasses.ScriptData"
     },
     {
       "assetObject": {
@@ -182,7 +174,15 @@
     },
     {
       "assetObject": {
-        "lastModified": 1678737109513,
+        "lastModified": 1678639308291,
+        "path": "shaders\\Sample.glsl"
+      },
+      "path": "shaders\\Sample.glsl",
+      "assetObjectClassName": "Core2D.DataClasses.ShaderData"
+    },
+    {
+      "assetObject": {
+        "lastModified": 1679264882598,
         "path": "Scripts\\HoholMegaSuperComponent.class"
       },
       "path": "Scripts\\HoholMegaSuperComponent.class",
@@ -190,11 +190,19 @@
     },
     {
       "assetObject": {
-        "lastModified": 1678743323774,
-        "path": "Scripts\\SpaceDeformationComponent.class"
+        "lastModified": -1,
+        "path": "/data/shaders/mesh/default_shader.glsl"
       },
-      "path": "Scripts\\SpaceDeformationComponent.class",
-      "assetObjectClassName": "Core2D.DataClasses.ScriptData"
+      "path": "/data/shaders/mesh/default_shader.glsl",
+      "assetObjectClassName": "Core2D.DataClasses.ShaderData"
+    },
+    {
+      "assetObject": {
+        "lastModified": -1,
+        "path": "/data/shaders/postprocessing/postprocessing_default_shader.glsl"
+      },
+      "path": "/data/shaders/postprocessing/postprocessing_default_shader.glsl",
+      "assetObjectClassName": "Core2D.DataClasses.ShaderData"
     }
   ]
 }
